changes image sizes; adds comments to scss files; adds store controller tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
-          <li><a href="/contact">Contact Us</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
       <main class='<%= controller.controller_name %>'>
-        <%= yield %>  
+        <%= yield %>
       </main>
     </section>
   </body>
