--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,3 +1,7 @@
+// Place all the styles related to the Store controller here.​
+​// They will automatically be included in application.css.​
+​// You can use Sass (SCSS) here: http://sass-lang.com/​
+
 .store {
   max-width: 80em;
   ul.catalog {
@@ -8,7 +12,7 @@
     li {
       padding: 1em;
       margin: 0;
-      border-bottom: solid thin #ddd;
+      border-bottom: solid 2px red;
 
       // This makes sure our <li> has enough height
       // to hold the entire image, since it's floated
