--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,14 +4,18 @@
 
 <h1>Men's Baseball Caps</h1>
 <ul class="catalog">
-	<% @products.each do |product| %>
-		<li>
-			<%= image_tag(product.image_url) %>
-			<h2><%= product.title %></h2>
-			<p><%= product.description %></p>
-			<div class="price">
-				<%= product.price %>
-			</div>
-		</li>
-	<% end %>
+  <% cache @products do %>
+  	<% @products.each do |product| %>
+      <% cache product do %>
+    		<li>
+    			<%= image_tag(product.image_url) %>
+    			<h2><%= product.title %></h2>
+    			<p><%= product.description %></p>
+    			<div class="price">
+    				<%= number_to_currency(product.price) %>
+    			</div>
+    		</li>
+      <% end %>
+  	<% end %>
+  <% end %>
 </ul>
